[gd_scene load_steps=28 format=3 uid="uid://32ho1v8m7f6p"]

[ext_resource type="Script" path="res://level_1.gd" id="1_s5w83"]
[ext_resource type="Script" path="res://actors/Level1/lineDrawer.gd" id="1_ysd65"]
[ext_resource type="Script" path="res://actors/Level1/path_follow_2d.gd" id="2_icm01"]
[ext_resource type="Texture2D" uid="uid://c3hclidiybrun" path="res://actors/Level1/New Piskel (2).png" id="3_ahcp6"]
[ext_resource type="Script" path="res://actors/Level1/sprite_2d.gd" id="4_f62xc"]
[ext_resource type="Texture2D" uid="uid://klx7edblv00e" path="res://actors/Level1/Cannon Fire.png" id="5_q2nvb"]
[ext_resource type="Script" path="res://actors/Level1/Cannon.gd" id="6_0fpuu"]
[ext_resource type="PackedScene" uid="uid://cmdrx8l6bmkld" path="res://actors/bubbles/bubbles.tscn" id="7_igx21"]
[ext_resource type="PackedScene" uid="uid://d3s67x8qni2k4" path="res://target.tscn" id="8_gxwk0"]
[ext_resource type="Script" path="res://ammoBar.gd" id="9_k0ar7"]
[ext_resource type="Texture2D" uid="uid://ctyqwd6wndyus" path="res://actors/Ammo.png" id="10_pulkp"]
[ext_resource type="Texture2D" uid="uid://cllc7t2jqyhl4" path="res://explosion.png" id="12_m68su"]
[ext_resource type="AudioStream" uid="uid://lid70o4neetg" path="res://523089__magnuswaker__explosion-1.wav" id="13_54kbq"]
[ext_resource type="AudioStream" uid="uid://dc7f8xbsv8okr" path="res://480855__craigsmith__r29-23-rhythmic-movement-of-water.wav" id="14_jbnb4"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ly8ce"]

[sub_resource type="Curve2D" id="Curve2D_am31v"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0.930969, -22.0027, 1.85224, 95.2381, -1.85224, -95.2381, -33.6217, -281.901, -1.07147, 176.204, 1.07147, -176.204, 36.7741, -696.103, 0, 0, 0, 0, -2.30493, -1146.99)
}
point_count = 4

[sub_resource type="Animation" id="Animation_wyehk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_8ovwt"]
resource_name = "explosion"
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5, 0.5625, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 5, 5, 5, 5, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_khp2i"]
_data = {
"RESET": SubResource("Animation_wyehk"),
"explosion": SubResource("Animation_8ovwt")
}

[sub_resource type="Animation" id="Animation_0km0w"]
resource_name = "CannonFire"
length = 1.08334
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 0]
}

[sub_resource type="Animation" id="Animation_sbssf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xqrls"]
_data = {
"CannonFire": SubResource("Animation_0km0w"),
"RESET": SubResource("Animation_sbssf")
}

[sub_resource type="Animation" id="Animation_lsnbc"]
resource_name = "CannonFire"
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CannonL2:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_w4egv"]
length = 0.001
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CannonL2:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_w2g3a"]
resource_name = "ShipAnimation"
length = 2.00001
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 0, 0, 0, 0, 0, 0, 0, 0, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pfqrq"]
_data = {
"CannonFire": SubResource("Animation_lsnbc"),
"RESET": SubResource("Animation_w4egv"),
"ShipAnimation": SubResource("Animation_w2g3a")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oq3kg"]
size = Vector2(88, 136)

[node name="Level1" type="Node2D" groups=["level"]]
script = ExtResource("1_s5w83")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.145098, 0.0588235, 0.368627, 1)
position = Vector2(322.5, 517)
scale = Vector2(717, 1092)
texture = SubResource("CanvasTexture_ly8ce")

[node name="BubbleHOlder" type="Node2D" parent="."]
position = Vector2(68, 88)

[node name="Bubbles6" parent="BubbleHOlder" instance=ExtResource("7_igx21")]
position = Vector2(281, 623)
rotation = 1.5708

[node name="Bubbles" parent="BubbleHOlder" instance=ExtResource("7_igx21")]
position = Vector2(-3, 598)
rotation = 1.5708

[node name="Bubbles2" parent="BubbleHOlder" instance=ExtResource("7_igx21")]
position = Vector2(332, 905)
rotation = -1.5708

[node name="Bubbles3" parent="BubbleHOlder" instance=ExtResource("7_igx21")]
position = Vector2(324, 385)

[node name="Bubbles4" parent="BubbleHOlder" instance=ExtResource("7_igx21")]
position = Vector2(-30, 79)

[node name="Bubbles5" parent="BubbleHOlder" instance=ExtResource("7_igx21")]
position = Vector2(453, 64)
rotation = -1.5708

[node name="Bubbles7" parent="BubbleHOlder" instance=ExtResource("7_igx21")]
position = Vector2(158, 442)
rotation = 1.5708

[node name="Bubbles8" parent="BubbleHOlder" instance=ExtResource("7_igx21")]
position = Vector2(122, 747)
rotation = -1.5708

[node name="Bubbles9" parent="BubbleHOlder" instance=ExtResource("7_igx21")]
position = Vector2(485, 229)

[node name="Bubbles10" parent="BubbleHOlder" instance=ExtResource("7_igx21")]
position = Vector2(2, 887)

[node name="Bubbles11" parent="BubbleHOlder" instance=ExtResource("7_igx21")]
position = Vector2(137, 245)
rotation = -1.5708

[node name="Bubbles12" parent="BubbleHOlder" instance=ExtResource("7_igx21")]
position = Vector2(459, 545)

[node name="Bubbles13" parent="BubbleHOlder" instance=ExtResource("7_igx21")]
position = Vector2(512, 748)
rotation = 1.5708

[node name="Target" parent="." instance=ExtResource("8_gxwk0")]
position = Vector2(555, 559)
scale = Vector2(2.52, 2.52)

[node name="ammoBar" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 21.0
offset_top = 922.0
offset_right = 61.0
offset_bottom = 962.0
script = ExtResource("9_k0ar7")
ammo_texture = ExtResource("10_pulkp")
metadata/_edit_use_anchors_ = true

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(320, 1009)
rotation = 0.00289297
scale = Vector2(1.00577, 1.00001)
curve = SubResource("Curve2D_am31v")
script = ExtResource("1_ysd65")

[node name="Line2D" type="Line2D" parent="Path2D"]
width = 5.0

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(0.930969, -22.0027)
rotation = -1.70297
loop = false
script = ExtResource("2_icm01")

[node name="Ship" type="CharacterBody2D" parent="Path2D/PathFollow2D"]

[node name="Sprite2D" type="Sprite2D" parent="Path2D/PathFollow2D/Ship"]
texture_filter = 1
rotation = 1.5708
scale = Vector2(7.4, 7.4)
texture = ExtResource("3_ahcp6")
hframes = 3
vframes = 3
script = ExtResource("4_f62xc")

[node name="Sprite2D" type="Sprite2D" parent="Path2D/PathFollow2D/Ship/Sprite2D"]
texture_filter = 1
position = Vector2(6.73317, -2.31875)
scale = Vector2(0.71356, 0.71356)
texture = ExtResource("5_q2nvb")
hframes = 4
vframes = 4
script = ExtResource("6_0fpuu")

[node name="Explosion" type="Sprite2D" parent="Path2D/PathFollow2D/Ship/Sprite2D/Sprite2D"]
position = Vector2(5.90121, 0.659821)
rotation = 1.59764
texture = ExtResource("12_m68su")
hframes = 2
vframes = 3
frame = 5

[node name="Explosion" type="AnimationPlayer" parent="Path2D/PathFollow2D/Ship/Sprite2D/Sprite2D/Explosion"]
libraries = {
"": SubResource("AnimationLibrary_khp2i")
}

[node name="CannonLAnimation" type="AnimationPlayer" parent="Path2D/PathFollow2D/Ship/Sprite2D/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_xqrls")
}

[node name="Tip" type="Node2D" parent="Path2D/PathFollow2D/Ship/Sprite2D/Sprite2D"]
position = Vector2(1.01392, 0.55189)

[node name="toe" type="Node2D" parent="Path2D/PathFollow2D/Ship/Sprite2D/Sprite2D"]
position = Vector2(-5.97966, 0.473648)

[node name="reloadTimer" type="Timer" parent="Path2D/PathFollow2D/Ship/Sprite2D/Sprite2D"]
wait_time = 2.0
one_shot = true

[node name="explosion" type="AudioStreamPlayer2D" parent="Path2D/PathFollow2D/Ship/Sprite2D/Sprite2D"]
stream = ExtResource("13_54kbq")

[node name="CannonL2" type="Sprite2D" parent="Path2D/PathFollow2D/Ship/Sprite2D"]
texture_filter = 1
position = Vector2(-6.49136, -1.75955)
rotation = 3.14159
scale = Vector2(0.713559, 0.713559)
texture = ExtResource("5_q2nvb")
hframes = 4
vframes = 4
script = ExtResource("6_0fpuu")

[node name="Explosion" type="Sprite2D" parent="Path2D/PathFollow2D/Ship/Sprite2D/CannonL2"]
position = Vector2(5.9012, 0.659821)
rotation = 1.59764
texture = ExtResource("12_m68su")
hframes = 2
vframes = 3
frame = 5

[node name="Explosion" type="AnimationPlayer" parent="Path2D/PathFollow2D/Ship/Sprite2D/CannonL2/Explosion"]
libraries = {
"": SubResource("AnimationLibrary_khp2i")
}

[node name="CannonLAnimation" type="AnimationPlayer" parent="Path2D/PathFollow2D/Ship/Sprite2D/CannonL2"]
libraries = {
"": SubResource("AnimationLibrary_xqrls")
}

[node name="Tip" type="Node2D" parent="Path2D/PathFollow2D/Ship/Sprite2D/CannonL2"]
position = Vector2(1.01392, 0.55189)

[node name="toe" type="Node2D" parent="Path2D/PathFollow2D/Ship/Sprite2D/CannonL2"]
position = Vector2(-5.97966, 0.473648)

[node name="reloadTimer" type="Timer" parent="Path2D/PathFollow2D/Ship/Sprite2D/CannonL2"]
wait_time = 2.0
one_shot = true

[node name="explosion" type="AudioStreamPlayer2D" parent="Path2D/PathFollow2D/Ship/Sprite2D/CannonL2"]
stream = ExtResource("13_54kbq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Path2D/PathFollow2D/Ship"]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_pfqrq")
}
autoplay = "ShipAnimation"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/Ship"]
rotation = 1.5708
shape = SubResource("RectangleShape2D_oq3kg")

[node name="WaterSplash" type="AudioStreamPlayer2D" parent="Path2D/PathFollow2D"]
stream = ExtResource("14_jbnb4")

[connection signal="timeout" from="Path2D/PathFollow2D/Ship/Sprite2D/Sprite2D/reloadTimer" to="Path2D/PathFollow2D/Ship/Sprite2D/Sprite2D" method="_on_reload_timer_timeout"]
[connection signal="timeout" from="Path2D/PathFollow2D/Ship/Sprite2D/CannonL2/reloadTimer" to="Path2D/PathFollow2D/Ship/Sprite2D/CannonL2" method="_on_reload_timer_timeout"]

[editable path="BubbleHOlder/Bubbles6"]
